# customer-support-agent

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
agent/: __init__.py  core.py  sql_generator.py  sql_reviewer.py
database/: __init__.py  connection.py  models.py  seed.py
policies/: returns.md  shipping.md  warranty.md
rag/: __init__.py  embeddings.py  loader.py  vectorstore.py
tests/: conftest.py  test_agent_core.py  test_agent_sql.py  test_database.py  test_rag_loader.py  test_rag_vectorstore.py  test_tools_handlers.py  test_tools_router.py
tools/: __init__.py  definitions.py  router.py
tools/handlers/: __init__.py  database.py  policies.py
utils/: __init__.py  cli.py  initialization.py
